--- a/src/styles/SideBar.module.css
+++ b/src/styles/SideBar.module.css
@@ -1,22 +1,22 @@
 .sidebaricon {
-    @apply flex items-center justify-center 
-    h-12 w-12 mt-2 mb-2 mx-auto  
+    @apply flex items-center justify-center
+    h-12 w-12 mt-2 mb-2 mx-auto
     bg-custom-cream2 hover:bg-custom-green
     text-[#009B9A] hover:text-[#F5F5F5]
     hover:rounded-xl rounded-3xl
     transition-all duration-300 ease-linear
     cursor-pointer shadow-lg ;
   }
-  
+
 .icon {
     @apply flex items-center justify-center
-    h-12 w-12 mt-2 mb-2 mr-2 
+    h-12 w-12 mt-2 mb-2
     text-gray-700 hover:text-custom-green
     cursor-pointer;
   }
   .sidebar-logo {
-    @apply flex items-center justify-center 
-    h-12 w-12 mt-2 mb-2 mx-auto  
+    @apply flex items-center justify-center
+    h-12 w-12 mt-2 mb-2 mx-auto
     text-custom-green hover:text-custom-cream
     transition-all duration-300 ease-linear
     cursor-pointer ;
@@ -25,7 +25,7 @@
   .sidebartooltip {
     @apply absolute w-auto p-2 m-2 min-w-max left-14 rounded-md shadow-md
     text-custom-cream bg-custom-green
-    text-xs font-bold 
+    text-xs font-bold
     transition-all duration-100 scale-0 origin-left;
   }
 
