--- a/src/styles/Task.module.css
+++ b/src/styles/Task.module.css
@@ -27,13 +27,19 @@
   }
 
 .form__inp{
-    @apply text-gray-800 text-2xl font-semibold mx-28 mt-6;
+    @apply text-gray-800 text-2xl font-semibold mx-12 mt-3;
     border-radius: 0.375rem;
     letter-spacing: 0.025em;
     text-align: center;
+    height: 3rem;
 }
-.inp{
-    @apply  tracking-wider mt-4 text-xl flex-col space-y-4 text-gray-600
+.time__inp{
+    @apply tracking-wider mt-2 text-xl text-gray-600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
 }
 
 .inp2{
